[metadata]
name = BalanCLI 
version = 0.0.1
description = A Command Line Interface for balancing expenses and revenues
long_description = file: README.md
keywords = CLI

[options]
packages = BalanCLI
install_requires = 
    requests
    importlib; python version == "3.9"

[options.entry_points]
console_scripts =
    my-application = BalanCLI.module:my_function
    another-application = BalanCLI.module:another_function
